# C-_example

./: .gitignore  CMakeLists.txt  README.md
code_test/: constexpr_test.cpp  template_detach_test.cpp
include/: constexpr.h  template_detach.h
scripts/: build.sh
src/: constexpr.cpp  template_detach.inl
src/utils/: thread_pool.hpp
